Add slides for 06 - Arithmetic sequences

--- a/01 - Modular arithmetic.tex
+++ b/01 - Modular arithmetic.tex
@@ -119,7 +119,7 @@
       \end{problem}
       $8$ is $2 \times 2 \times 2$. That means that we can multiply it by $5 \times 5 \times 5$ and get $10 \times 10 \times 10$, so $1,000$ must be divisible by $8$.
 
-      Lets write down $721{,}456$ as $721{,}000 + 456$, as we know from the \emph{addition theorem} the remainder of the division of $721{,}456$ is equal to the sum of remainders of each of summands. Since $21{,}000$ is multiple of $1{,}000$ it remainder modulo $8$ is $0$. So 
+      Let's write down $721{,}456$ as $721{,}000 + 456$, as we know from the \emph{addition theorem} the remainder of the division of $721{,}456$ is equal to the sum of remainders of each of summands. Since $21{,}000$ is multiple of $1{,}000$ it remainder modulo $8$ is $0$. So 
       \[ 721{,}456 \equiv 456 \pmod{8}. \]
       That means to check whether $721{,}456$ divisible by $8$, we need to check, whether $456$ is divisible by $8$. Indeed $456 = 8 \times 57$, so $721{,}456$ is also divisible by $8$.\medskip
       
