Fix formating 08 - PIE

--- a/08 - Inclusion Exclusion Principle.tex
+++ b/08 - Inclusion Exclusion Principle.tex
@@ -344,7 +344,7 @@
 \begin{frame}{Stars and bars}
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
-      Going through the casework for the simple case of $4$ balls and $3$ urns was time-consuming, and would become impossible to do without a computer as the numbers grow larger.  There is, however, a technique that can be used to solve such problems.  We will represent each ball by a~star $\star$, and the boundary between urns by a~vertical bar $\mid$.  Any star to the left of the first bar is in urn $A$, any star between the pair of bars is in urn $B$, and any stars to the right of second bar is in urn $C$.  So \small{\fbox{$\star\mid\star\,\star\mid\star$}} can be read as $1$ ball in urn~$A$, $2$ balls in urn $B$ and $1$ ball in urn $C$.  The $15$ arrangements from the $4$ cases on the previous slide are:
+      Going through the casework for the simple case of $4$ balls and $3$ urns was time-consuming, and would become impossible to do without a computer as the numbers grow larger.  There is, however, a technique that can be used to solve such problems.  We will represent each ball by a~star $\star$, and the boundary between urns by a~vertical bar $\mid$.  Any star to the left of the first bar is in urn $A$, any star between the pair of bars is in urn $B$, and any stars to the right of second bar is in urn $C$.  So {\small\fbox{$\star\mid\star\,\star\mid\star$}} can be read as $1$ ball in urn~$A$, $2$ balls in urn $B$ and $1$ ball in urn $C$.  The $15$ arrangements from the $4$ cases on the previous slide are:
       \small
       \begin{example}
         Case 1: \fbox{$\star\star\star\,\star\mid\,\mid$}, \fbox{$\mid\star\star\star\,\star\mid$}, \fbox{$\mid\,\mid\star\star\star\,\star$}.
