Fix formating 08 - PIE

--- a/08 - Inclusion Exclusion Principle.tex
+++ b/08 - Inclusion Exclusion Principle.tex
@@ -81,7 +81,7 @@
       Sometimes it is helpful to visualize sets as circles with all their elements inside.
 
       For example, this diagram represents $3$ sets: the red set with elements $2$, $5$, and $1$, the yellow set with elements $1$ and $6$, and the green with elements $4$ and $7$. $3$ doesn't belong to any set. If we denote the sets as $R$, $Y$ and $G$, we can write
-      \[ R = \left\{1, 2, 5\right\},\ \  Y = \left\{1, 6\right\}\ \ \text{and}\ \ G = \left\{4, 7\right\}. \]
+      \[ R = \left\{1,\ 2,\ 5\right\},\ \  Y = \left\{1,\ 6\right\}\ \ \text{and}\ \ G = \left\{4,\ 7\right\}. \]
       \vspace*{-0.9\baselineskip}
       \begin{definition}
         The \textbf{number} of elements (the set \emph{cardinality}) in a~set $S$ is denoted as $|S|$.
@@ -94,7 +94,7 @@
         The \textbf{union} (denoted by $\cup$) of sets is the set of all elements in \emph{any} of this set.
       \end{definition}
       For example
-      \[ R \cup Y = \left\{1, 2, 5, 6\right\},\quad  Y \cup G = \left\{1, 4, 6, 7\right\}. \]
+      \[ R \cup Y = \left\{1,\ 2,\ 5,\ 6\right\},\quad  Y \cup G = \left\{1,\ 4,\ 6,\ 7\right\}. \]
       \vspace*{-0.9\baselineskip}
       \begin{definition}
         The \textbf{intersection} (denoted by $\cap$) of sets is the set whose elements are in \emph{all} sets.
@@ -107,7 +107,7 @@
         The \textbf{complement} of a set $S$ (denoted as $S'$ or $\overline{S}$) is a set of all elements \emph{not in} a set $S$.
       \end{definition}
       For example if we consider only elements from $1$ to $7$ (it is also called an \textbf{universal set})
-      \[ R′ = \left\{3, 4, 6, 7\right\},\quad  G′ = \left\{1, 2, 3, 5, 6\right\}. \]
+      \[ R′ = \left\{3,\ 4,\ 6,\ 7\right\},\quad  G′ = \left\{1,\ 2,\ 3,\ 5,\ 6\right\}. \]
     \end{column}
   \end{columns}
 \end{frame}
