Put problem in present tense

--- a/08 - Inclusion Exclusion Principle.tex
+++ b/08 - Inclusion Exclusion Principle.tex
@@ -116,11 +116,11 @@
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
       \begin{problem}
-        What the number of integers less than or equal to $100$ that were factors of $4$ or factors of $5$?
+        What the number of integers less than or equal to $100$ that are factors of $4$ or factors of $5$?
       \end{problem}
-      We knew there were $25$ factors of $4$ and $20$ factors of $5$, but the final answer was 
+      We knoe there are $25$ factors of $4$ and $20$ factors of $5$, but the final answer is 
       \[ 25 + 20 - 5 = 40, \]
-      because we had to subtract the $5$ factors of $20$ that were being counted twice.
+      because we have to subtract the $5$ factors of $20$ that are being counted twice.
 
       We can generalize this to the counting of elements in any two sets $A$ and $B$.
       \vspace*{-0.9\baselineskip}
