Add slides for 09 - Rate

--- a/08 - Inclusion Exclusion Principle.tex
+++ b/08 - Inclusion Exclusion Principle.tex
@@ -106,7 +106,7 @@
         \vspace*{-0.3em}
         The \textbf{complement} of a set $S$ (denoted as $S'$ or $\overline{S}$) is a set of all elements \emph{not in} a set $S$.
       \end{definition}
-      For example if we consider only elements from $1$ to $7$ (it is also called an \textbf{universal set})
+      For example if we consider only elements from $1$ to $7$ (it is an \textbf{universal set} of the problem)
       \[ R′ = \left\{3,\ 4,\ 6,\ 7\right\},\quad  G′ = \left\{1,\ 2,\ 3,\ 5,\ 6\right\}. \]
     \end{column}
   \end{columns}
@@ -397,7 +397,7 @@
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
         \item What is the smallest possible average of four distinct positive even integers?
-        \item In a gymnastics competition, judge’s marks are integers $0-10$ inclusive.  There are $6$ judges, and the athlete's score is calculated by taking the average of the remaining $4$ marks after the highest and lowest marks are eliminated.  The winning gymnast had a $8.5$ score, while the second place finisher had a $8.0$ score.  If the both received identical lowest marks, could the highest marks they received have changed the order of finish if they were included in the scoring average?  Explain your reasoning.
+        \item In a gymnastics competition, judge’s marks are integers $0-10$ inclusive.  There are $6$ judges, and the athlete's score is calculated by taking the average of the remaining $4$ marks after the highest and lowest marks are eliminated.  The winning gymnast had a $8.5$ score, while the second place finisher had a~$8.0$ score.  If the both received identical lowest marks, could the highest marks they received have changed the order of finish if they were included in the scoring average?  Explain your reasoning.
         \item The \emph{harmonic} mean of a set of non-zero numbers is the reciprocal of the average of the reciprocals of the numbers. 
         What is the harmonic mean of $1$, $2$, and $4$?
         \seti
